--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             <td>{{ form.id }}</td>
             <td>{{ form.name }}</td>
             <td>{{ form.hostname }}</td>
-            <td>{{ form.cluster_belong }}</td>
+            <td>{{ form.unit_belong }}</td>
             <td>{{ form.ip }}</td>
             <td>{{ form.date_created.strftime("%d/%m/%Y %H:%M:%S") }}</td>
             <td>
