--- a/templates/unit_new.html
+++ b/templates/unit_new.html
@@ -9,7 +9,7 @@
     <h1 style="text-align: left">Create New Unit</h1>
     <hr/>
 
-    <form action="/cluster_new" method="POST" name="theUnit">
+    <form action="/unit_new" method="POST" name="theUnit">
         <section>
             <h5>Unit Name</h5>
             <input type="text" name="unit_name" required/>
@@ -17,20 +17,20 @@
 
         <section>
             <h5>Unit Level</h5>
-            <input type="radio" id="cluster" name="unit_level" value="cluster" required>
+            <input type="radio" id="unit" name="unit_level" value="cluster" required>
             <label for="cluster">Cluster</label>
             <input type="radio" id="containerization" name="unit_level" value="containerization" required>
             <label for="containerization">Containerization</label>
-            <input type="radio" id="pods" name="unit_level" value="pods" required>
-            <label for="pods">Pods</label>
+            <input type="radio" id="pod" name="unit_level" value="pod" required>
+            <label for="pod">Pod</label>
         </section><br/>
 
         <section>
             <h5>Level Details</h5>
-            <h5>Available Levels: Cluster > Containerization > Pods</h5>
+            <h5>Available Levels: Cluster > Containerization > Pod</h5>
             <input type="text" name="cluster" required/>
             <input type="text" name="containerization"/>
-            <input type="text" name="pods"/>
+            <input type="text" name="pod"/>
         </section><br/>
 
         <section>
@@ -41,12 +41,12 @@
 
         <section>
             <h5>Unit's Embedded Functions</h5>
-            <textarea name="cluster_functions" rows="5" cols="60" required></textarea>
+            <textarea name="unit_functions" rows="5" cols="60" required></textarea>
         </section>
 
         <section>
             <h5>Unit's Subsystems</h5>
-            <textarea name="cluster_subsystems" rows="5" cols="60" required></textarea>
+            <textarea name="unit_subsystems" rows="5" cols="60" required></textarea>
         </section><br/>
 
         <section>
