fix minor bugs in unit_update

--- a/templates/unit_update.html
+++ b/templates/unit_update.html
@@ -17,7 +17,7 @@
 
         <section>
             <h5>Unit Level</h5>
-            <input type="radio" id="unit" name="unit_level" value="cluster" required>
+            <input type="radio" id="cluster" name="unit_level" value="cluster" required>
             <label for="cluster">Cluster</label>
             <input type="radio" id="containerization" name="unit_level" value="containerization" required>
             <label for="containerization">Containerization</label>
