--- a/templates/unit_update.html
+++ b/templates/unit_update.html
@@ -40,12 +40,12 @@
         <hr/>
 
         <section>
-            <h5>unit's Embedded Functions</h5>
+            <h5>Unit's Embedded Functions</h5>
             <textarea name="unit_functions" rows="5" cols="60" required>{{unit.unit_functions}}</textarea>
         </section>
 
         <section>
-            <h5>unit's Subsystems</h5>
+            <h5>Unit's Subsystems</h5>
             <textarea name="unit_subsystems" rows="5" cols="60" required>{{unit.unit_subsystems}}</textarea>
         </section>
 
