add db dump for units

--- a/templates/unit.html
+++ b/templates/unit.html
@@ -14,7 +14,7 @@
             </dev>
         </form>
     
-        <form action="/dump">
+        <form action="/unit_dump">
             <div style="position: relative; left: 37%;">
                 <button type="submit" class="btn btn-primary">Dump Units Database</button>
             </div>
