--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,20 +1,37 @@
-.jumbotron {
-    padding-top: 15px !important;
-    padding-bottom: 15px !important;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+li {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #3ac8eb;
 }
 
 .content {
     text-align: left;
     margin: 0 auto;
     width: 1000px;
-}
-
-nav a {
-    color: rgb(43, 119, 232);
-    font-size: 2.8em;
-    font-family: "Times New Roman", Times, serif;
-    margin-left: 60px;
-    text-decoration: none;
 }
 
 .button-container form,
