--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,29 +31,16 @@ li a:hover:not(.active) {
 .content {
     text-align: left;
     margin: 0 auto;
-    width: 1000px;
-}
-
-.button-container form,
-.button-container form div {
-    text-align: center;
-    display: inline;
-    line-height: normal;
-}
-
-.button-container button {
-    display: inline;
-    vertical-align: middle;
-}
-
-table, td, th {
-    border: 1px solid #aaa;
+    width: 1250px;
 }
 
 table {
+    font-size: 16px;
     border-collapse: collapse;
     width: 100%;
 }
+  
+tr:nth-child(even){background-color: #f2f2f2}
 
 th {
     text-align: center;
