move hosts-related routes to routes_hosts file

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 <body>
     <ul>
-        <li><a class="active" href="{{ url_for('index') }}">Main</a></li>
+        <li><a class="active" href="{{ url_for('routes_hosts.index') }}">Main</a></li>
         <li><a href="{{ url_for('unit') }}">Org. Units</a></li>
         <li><a href="#">About</a></li>
         <li style="float: right;"><a href="/unit_dump">Dump Units</a></ri>
