--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
         <li><a class="active" href="{{ url_for('routes_hosts.index') }}">Main</a></li>
         <li><a href="{{ url_for('routes_units.unit') }}">Org. Units</a></li>
         <li><a href="#">About</a></li>
+        <li style="float: right;"><a href="/upload_csv">Upload CSV</a></ri>
         <li style="float: right;"><a href="/unit_dump">Dump Units</a></ri>
         <li style="float: right;"><a href="/dump">Dump Hosts</a></ri>
         <li style="float: right;"><a href="/unit_new">Add Unit</a></ri>
