add defaul unit level values to unit update method

--- a/templates/unit_update.html
+++ b/templates/unit_update.html
@@ -17,11 +17,11 @@
 
         <section>
             <h5>Unit Level</h5>
-            <input type="radio" id="cluster" name="unit_level" value="cluster" required>
+            <input type="radio" id="cluster" name="unit_level" {{lvl[0]}} value="cluster" required>
             <label for="cluster">Cluster</label>
-            <input type="radio" id="containerization" name="unit_level" value="containerization" required>
+            <input type="radio" id="containerization" name="unit_level" {{lvl[1]}} value="containerization" required>
             <label for="containerization">Containerization</label>
-            <input type="radio" id="pod" name="unit_level" value="pod" required>
+            <input type="radio" id="pod" name="unit_level" {{lvl[2]}} value="pod" required>
             <label for="pod">Pod</label>
         </section><br/>
 
