--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,11 @@
+/* general */
+.content {
+    text-align: left;
+    margin: 0 auto;
+    width: 1250px;
+}
+
+/* navigation bar */
 ul {
     list-style-type: none;
     margin: 0;
@@ -28,12 +36,7 @@ li a:hover:not(.active) {
     background-color: #3ac8eb;
 }
 
-.content {
-    text-align: left;
-    margin: 0 auto;
-    width: 1250px;
-}
-
+/* main table */
 table {
     font-size: 16px;
     border-collapse: collapse;
@@ -50,12 +53,4 @@ th {
 td {
     text-align: center;
     padding: 5px;
-}
-
-.form {
-    margin-top: 20px;
-}
-
-#content {
-    width: 70%;
 }
