--- a/templates/update.html
+++ b/templates/update.html
@@ -15,19 +15,19 @@
     <h1 style="text-align: left">Update Form</h1><hr/>
 
     <form action="/update/{{form.id}}" name="theForm" method="POST">
-        <section>
-            <h5>System's Name</h5>
+        <section class="form-inline">
+            <label>System's Name</label>
             <input type="text" name="name" value="{{form.name}}" />
         </section><br/>
 
-        <section>
-            <h5>Hostname</h5>
+        <section class="form-inline">
+            <label>Hostname</label>
             <input type="integer" name="hostname" value="{{form.hostname}}" />
             <button type="button" onclick="return(validate());" class="btn btn-primary btn-sm">Check Hostname</button>
         </section><br/>
 
-        <section>
-            <h5>Unit Affiliation</h5>
+        <section class="form-inline">
+            <label>Unit Affiliation</label>
             <input type="text" name="unit_belong" value="{{form.unit_belong}}" list="unit_list"/>
             <datalist id="unit_list">
                 {% for u in units %}
@@ -37,8 +37,8 @@
             <button type="button" onclick="return(get_unit());" class="btn btn-primary btn-sm">Get Unit</button>
         </section><br/>
 
-        <section>
-            <h5>IP address  format: 1.1.1.1/24</h5>
+        <section class="form-inline">
+            <label>IP address  format: 1.1.1.1/24</label>
             <input type="text" name="ip" value="{{form.ip}}" />
                 <div class="input-wrapper">
                     <div>Extra IP Addresses
@@ -47,15 +47,15 @@
                 </div>
         </section>
                 
-        <section>
-            <h5>Extra IP addresses</h5>
+        <section class="form-inline">
+            <label>Extra IP addresses</label>
             {% for exip in form.extra_ips %}
             <input type="text" name="extra_ips[]" value="{{exip.extra_ip}}" />
             {% endfor %}
         </section><br/>
 
-        <section>
-            <h5>Server's Linux Distribution</h5>
+        <section class="form-inline">
+            <label>Server's Linux Distribution</label>
             <select name="distro" method="GET" action="/form">
                 {% for d in dirlist %}
                     {% if d == form.distro %}
@@ -67,13 +67,13 @@
             </select>
         </section><br/>
 
-        <section>
-            <h5>System’s functions</h5>
+        <section class="form-inline">
+            <label>System’s functions</label>
             <textarea name="functions" rows="5" cols="60" required>{{form.functions}}</textarea>
         </section><br/>
 
-        <section>
-            <h5>Subsystems</h5>
+        <section class="form-inline">
+            <label>Subsystems</label>
             <textarea name="subsystems" rows="5" cols="60" required>{{form.subsystems}}</textarea>
         </section><br/>
 
