update css in new unit form

--- a/templates/unit_new.html
+++ b/templates/unit_new.html
@@ -10,13 +10,13 @@
     <hr/>
 
     <form action="/unit_new" method="POST" name="theUnit">
-        <section>
-            <h5>Unit Name</h5>
+        <section class="form-inline">
+            <label>Unit Name</label>
             <input type="text" name="unit_name" required/>
         </section><br/>
 
-        <section>
-            <h5>Unit Level</h5>
+        <section class="form-inline">
+            <label>Unit Level</label>
             <input type="radio" id="unit" name="unit_level" value="cluster" required>
             <label for="cluster">Cluster</label>
             <input type="radio" id="containerization" name="unit_level" value="containerization" required>
@@ -25,9 +25,8 @@
             <label for="pod">Pod</label>
         </section><br/>
 
-        <section>
-            <h5>Level Details</h5>
-            <h5>Available Levels: Cluster > Containerization > Pod</h5>
+        <section class="form-inline">
+            <label>Level Details</label>
             <input type="text" name="cluster" list="cluster_list" required/>
             <datalist id="cluster_list">
                 {% for c in clusters %}
@@ -50,23 +49,23 @@
             </datalist>
         </section><br/>
 
-        <section>
-            <h5>Unit Description</h5>
+        <section class="form-inline">
+            <label>Unit Description</label>
             <textarea name="description" rows="5" cols="60" required></textarea>
         </section>
         <hr/>
 
-        <section>
-            <h5>Unit's Embedded Functions</h5>
+        <section class="form-inline">
+            <label>Unit's Embedded Functions</label>
             <textarea name="unit_functions" rows="5" cols="60" required></textarea>
-        </section>
+        </section><br/>
 
-        <section>
-            <h5>Unit's Subsystems</h5>
+        <section class="form-inline">
+            <label>Unit's Subsystems</label>
             <textarea name="unit_subsystems" rows="5" cols="60" required></textarea>
         </section><br/>
 
-        <section>
+        <section class="form-inline">
             <button type="submit" class="btn btn-primary">Submit</button>
         </section><br/>
 
