change add extra email link to button at update

--- a/templates/update.html
+++ b/templates/update.html
@@ -41,9 +41,10 @@
             <label>IP address  format: 1.1.1.1/24</label>
             <input type="text" name="ip" value="{{form.ip}}" />
                 <div class="input-wrapper">
-                    <div>Extra IP Addresses
-                    <a href="javascript:void(0);" class="add-input" title="Add input">Add</a>
-                    </div>
+                    <label>Extra IP Addresses</label>
+                        <a href="javascript:void(0);" class="add-input" title="Add input">
+                            <button type="button">Add</button>
+                        </a>
                 </div>
         </section>
                 
