separate search to a separate service route

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a class="active" href="{{ url_for('routes_hosts.index') }}">Main</a></li>
         <li><a href="{{ url_for('routes_units.unit') }}">Org. Units</a></li>
-        <li><a href="{{ url_for('routes_hosts.search') }}">Search</a></li>
+        <li><a href="{{ url_for('routes_service.search') }}">Search</a></li>
         <li style="float: right;"><a href="/upload_csv">Upload CSV</a></ri>
         <li style="float: right;"><a href="/unit_dump">Dump Units</a></ri>
         <li style="float: right;"><a href="/dump">Dump Hosts</a></ri>
