--- a/templates/search.html
+++ b/templates/search.html
@@ -8,8 +8,9 @@
 
 {% block body %}
 <form class="search-inline" method="post" action="" style="margin:auto;max-width:600px">
-    <input type="text" placeholder="Search form" name="book">
-    <button type="submit"><i class="fa fa-search"></i>
+    <input type="text" placeholder="Search form" name="query">
+    <button type="submit">
+        <i class="fa fa-search"></i>
     </button>
 </form>
 
