--- a/templates/search.html
+++ b/templates/search.html
@@ -8,16 +8,39 @@
 
 {% block body %}
 <form class="search-inline" method="post" action="" style="margin:auto;max-width:600px">
-    <input type="text" placeholder="Search form" name="query">
+    <input type="text" placeholder="Search form" name="query" required>
     <button type="submit">
         <i class="fa fa-search"></i>
     </button>
 </form>
 
-{% for item in data %}
-<tr>
-    <td>{{item}}</td>
-    </br>
-</tr>
-{% endfor %}
+<div class="content">
+    <br/>
+    <table>
+        <tr style="text-align: center">
+            <th>ID</th>
+            <th>Name</th>
+            <th>Host</th>
+            <th>Unit</th>
+            <th>IP</th>
+            <th>Date</th>
+            <th>Actions</th>
+        </tr>
+        {% for form in forms %}
+        <tr>
+            <td>{{ form.id }}</td>
+            <td>{{ form.name }}</td>
+            <td>{{ form.hostname }}</td>
+            <td>{{ form.unit_belong }}</td>
+            <td>{{ form.ip }}</td>
+            <td>{{ form.date_created.strftime("%d/%m/%Y %H:%M:%S") }}</td>
+            <td>
+                <a href="/delete/{{form.id}}" onclick="return confirm('Are you sure you want to DELETE form {{ form.id }}?')">Delete</a>
+                <br>
+                <a href="/update/{{form.id}}">Update</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+</div>
 {% endblock %}
