--- a/templates/upload_csv.html
+++ b/templates/upload_csv.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block body %}
-<form action = "/upload_csv" method = "POST" 
+<form class="update-form-inline" action = "/upload_csv" method = "POST" 
     enctype = "multipart/form-data">
     <input type = "file" name = "file" />
-    <input type = "submit"/>
+    <button type="submit">Submit</button>
 </form>   
 {% endblock %}
