remove some old bootstrap code

--- a/templates/form.html
+++ b/templates/form.html
@@ -74,7 +74,7 @@
         </section><br/>
 
         <section class="form-inline">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit">Submit</button>
         </section>
 
     </form>
