--- a/templates/unit_update.html
+++ b/templates/unit_update.html
@@ -49,7 +49,7 @@
         </section><br/>
 
         <section class="form-inline">
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit">Update</button>
         </section>
 
     </form>
