--- a/templates/unit_new.html
+++ b/templates/unit_new.html
@@ -66,7 +66,7 @@
         </section><br/>
 
         <section class="form-inline">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit">Submit</button>
         </section><br/>
 
     </form>
