fix radio button layout

--- a/templates/unit_new.html
+++ b/templates/unit_new.html
@@ -16,13 +16,13 @@
         </section><br/>
 
         <section class="form-inline">
-            <label>Unit Level</label>
+            <label >Unit Level</label>
             <input type="radio" id="unit" name="unit_level" value="cluster" required>
-            <label for="cluster">Cluster</label>
+            <label id="unit-level" for="cluster">Cluster</label>
             <input type="radio" id="containerization" name="unit_level" value="containerization" required>
-            <label for="containerization">Containerization</label>
+            <label id="unit-level" for="containerization">Containerization</label>
             <input type="radio" id="pod" name="unit_level" value="pod" required>
-            <label for="pod">Pod</label>
+            <label id="unit-level" for="pod">Pod</label>
         </section><br/>
 
         <section class="form-inline">
