--- a/templates/unit_update.html
+++ b/templates/unit_update.html
@@ -18,11 +18,11 @@
         <section class="form-inline">
             <label>Unit Level</label>
             <input type="radio" id="cluster" name="unit_level" {{lvl[0][1]}} value="cluster" required>
-            <label for="cluster">Cluster</label>
+            <label id="unit-level" for="cluster">Cluster</label>
             <input type="radio" id="containerization" name="unit_level" {{lvl[1][1]}} value="containerization" required>
-            <label for="containerization">Containerization</label>
+            <label id="unit-level" for="containerization">Containerization</label>
             <input type="radio" id="pod" name="unit_level" {{lvl[2][1]}} value="pod" required>
-            <label for="pod">Pod</label>
+            <label id="unit-level" for="pod">Pod</label>
         </section><br/>
 
         <section class="form-inline">
