--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,7 +66,7 @@ td {
     align-items: center;
 }
   
-.form-inline label {
+.form-inline label:not([id="unit-level"]) {
     margin: 5px 10px 5px 0;
     width: 17%; 
 }
@@ -126,7 +126,6 @@ td {
 .update-form-inline button:hover {
     background-color: rgb(87, 86, 86);
 }
-
 
 /* horizontal breaks */
 hr {
