add basic authentication method

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,13 @@
 <body>
     <h3>Login</h3>
     <div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="notification is-danger">
+                {{ messages[0] }}
+            </div>
+        {% endif %}
+        {% endwith %}
         <form method="POST" action="/login">
             <section>
                 <input type="email" name="email" placeholder="Your Email" autofocus="">
