--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
 
 <body>
-    <h3>Login</h3>
-    <div>
+    <h2>Login</h2>
+    <div class="login">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
@@ -18,13 +18,17 @@
             </div>
         {% endif %}
         {% endwith %}
-        <form method="POST" action="/login">
+        <form method="POST" id="login" action="/login">
             <section>
+                <label>User Email</label><br>
                 <input type="email" name="email" placeholder="Your Email" autofocus="">
+                <br><br>
             </section>
 
             <section>
+                <label>Password</label><br>
                 <input type="password" name="password" placeholder="Your Password">
+                <br><br>
             </section>
 
             <section>
