--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,7 @@
 <section>
     <p>User Name:  {{name}}</p>
     <p>User Email: {{email}}</p>
+    <a href="{{ url_for('routes_auth.logout') }}">Logout</a>
 </section>
 
 {% endblock %}
