--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -5,17 +5,19 @@
 }
 
 .card {
-    width: 300px;
-    background-color: rgb(198, 248, 246);
+    width: 400px;
+    height: 300px;
+    background-color: rgb(217, 222, 233);
+    border-style: dashed;
+    border-color: black;
     border-radius: 20px;
     overflow: hidden;
-    margin: 50px auto;
+    margin: 20px;
 }
 
 .title {
-    color: var(--dark-blue);
     font-weight: 900;
-    font-size: 32px;
+    font-size: 40px;
     text-align: center;
     margin: 10px 0;
 }
@@ -26,9 +28,40 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    font-size: 18px;
+    font-size: 26px;
 }
 
 .container > * {
     margin: 13px 0;
+}
+
+.logout-a {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    font-size: 26px;
+    font-weight: 700;
+    background-color: rgb(206, 206, 206);
+    border-radius: 10px;
+}
+
+.logout-a:visited{
+    color: black;
+}
+
+.logout-a:hover {
+    opacity: 0.8;
+    text-decoration: none;
+}
+
+.user-info {
+    font-size: 16px;
+    background-color: hsl(225, 100%, 98%);
+    padding: 25px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
