--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
 {% block body %}
 
 <div class="card">
-    <h2 class="title">Profile Page</h2>
+    <h2 class="title">Profile Information</h2>
 
     <div class="container">
         <div class="user-info">
