--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -16,8 +16,8 @@
 }
 
 .title {
-    font-weight: 900;
-    font-size: 40px;
+    font-weight: 700;
+    font-size: 36px;
     text-align: center;
     margin: 10px 0;
 }
@@ -56,12 +56,12 @@
 }
 
 .user-info {
-    font-size: 16px;
+    font-size: 20px;
     background-color: hsl(225, 100%, 98%);
     padding: 25px;
     border-radius: 12px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
